# gravotech

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
app/: config.py
app/actions/: actions.py
app/api/: main.py  models.py
app/core/: gravotech.py
app/docs/Gravotech-api/: Get Status.bru  Healthcheck.bru  bruno.json
app/docs/Gravotech-api/environments/: Docker.bru  Local.bru
app/streamers/: ip_streamer.py
docker/: Dockerfile  docker-compose.yml  server.Dockerfile
docs/source/: api_client.rst  api_streamers.rst  conf.py  index.rst  installation.rst  usage.rst
gravotech/: __init__.py  client.py
gravotech/actions/: actions.py
gravotech/api/: main.py  models.py
gravotech/core/: gravotech.py
gravotech/streamers/: ip_streamer.py
gravotech/utils/: errors.py
libs/actions/: actions.py
libs/core/: gravotech.py
libs/server/: dumb_gravotech.py
libs/streamers/: ip_streamer.py
tests/: dumb_gravotech.py  test_actions.py  test_client.py  test_ip_streamer.py  test_utils.py
