[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gravotech-tl07"
version = "1.0.0"
description = "A Python library to communicate with Gravotech machines using TL07 protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Saad RAFIQUL", email = "saad.rafiqul1@gmail.com"},
]
keywords = ["gravotech", "tl07", "marking", "engraving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]


dependencies = []

[project.urls]
"Homepage" = "https://github.com/Saadiinho/gravotech"
"Bug Tracker" = "https://github.com/Saadiinho/gravotech/issues"
"Documentation" = "https://saadiinho.github.io/gravotech/"

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints"
]
